--- a/client/src/assets/styles/_teams.scss
+++ b/client/src/assets/styles/_teams.scss
@@ -1,10 +1,10 @@
 .teams-page {
-  display: flex;
-  justify-content: center;
+  display: block;
 
   .teams-layout {
     width: 100%;
     max-width: 700px;
+    margin: 0 auto;
   }
 
   .page-title {
